# realsense_pipline

./: CMakeLists.txt  README.md
config/: realsense_d435i.yaml
include/: realsense_pipline.h
src/: realsense_pipline.cpp  realsense_pipline_node.cpp
